# substack_backup

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  setup.cfg
mutants/: mutmut-stats.json  pyproject.toml  setup.cfg
mutants/src/substack_sync/: cli.py  errors.py  models.py  post_repository.py  resilience.py  sync_execution.py  sync_planning.py  use_case.py
mutants/tests/: test_cli.py  test_project_tooling.py  test_resilience.py  test_sync_execution.py  test_use_case.py
mutants/tests/fixtures/markdown/: triangulation-in-tdd-and-the-rule.md
posts/: 20241119104841-technical-debt.md  20250107070040-the-missing-value-in-xp-pragmatism.md  20250114080100-what-makes-a-great-automated-test.md  20250121080045-what-to-test-the-subject-under-test.md  20250128080048-how-to-write-a-test.md  20250204080052-unlock-the-secrets-of-software-testing.md  20250207173059-antes-mi-profesion-que-mi-trabajo.md  20250207173116-my-profession-before-my-job.md  20250211080056-deep-dive-into-the-relationship-between.md  20250218075820-test-doubles.md  20250225070045-unit-testing-basics.md  20250304070044-integration-testing-basics.md  20250318070045-explaining-unit-tests-solitarysociable.md  20250325070053-collaborative-work-over-just-working.md  20250401060141-when-platform-and-security-become.md  20250408060159-hexagonal-architecture-understanding.md  20250415060214-acceptance-testing-more-than-tests.md  20250422060115-subcutaneous-acceptance-tests-verifying.md  20250429060100-effective-teams-productive-teams.md  20250430060125-clean-code-discussion.md  (+66 more)
tests/: test_slug.py  (+12 more)
(+77 files in other folders)
